Fix: Add missing pillState ID in test.html

--- a/templates/test.html
+++ b/templates/test.html
@@ -216,7 +216,7 @@
 <body>
     <header>
         <div class="header-top">
-            <span class="pill">🧪 Testler</span>
+            <span class="pill" id="pillState">🧪 Testler</span>
             <span class="meta" id="summaryMeta">Hazır</span>
         </div>
         <div class="actions">
