--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
 
     <div class="call-screen" id="callScreen">
       <div class="call-video-area">
-        <div style="position:absolute;top:0;left:0;right:0;bottom:0;display:flex;align-items:center;justify-content:center;color:#999;font-size:20px;">📹 Video Akışı</div>
+        <div class="video-placeholder">📹 Video Akışı</div>
         <video class="local-video" id="localVideo"></video>
         <div class="call-header">
           <div class="call-user-info">
