Feature: Add real OTP system with Telegram integration (remove demo OTP)

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -21,7 +21,7 @@
         <span>🛡️</span>
       </div>
       <div class="security-text">Görevli Yönetim Sistemi</div>
-      <input id="otp" type="password" class="login-input" placeholder="OTP: demo" maxlength="10" />
+      <input id="otp" type="text" class="login-input" placeholder="6 haneli OTP kodu" maxlength="6" inputmode="numeric" pattern="[0-9]*" />
       <button id="btnOtp" class="login-btn">Giriş Yap</button>
     </div>
   </div>
